MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/SPAWhatsapp__c.object-meta.xml
<CustomObject>
    <label>SPAWhatsapp</label>
    <nameField>
        <displayFormat>SPA-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPAWhatsapp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>