MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>