MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/APICallStatus__c.field-meta.xml
<CustomField>
    <fullName>APICallStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APICallStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>