MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPAWhatsapp</relationshipLabel>
    <relationshipName>SPAWhatsapp</relationshipName>
    <type>Lookup</type>
</CustomField>