MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <formula>Customer_Account__r.FirstName + &apos; &apos; +Customer_Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerName</label>
    <type>Text</type>
</CustomField>