MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EnvelopeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>