MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/FileUploaded__c.field-meta.xml
<CustomField>
    <fullName>FileUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FileUploaded</label>
    <type>Checkbox</type>
</CustomField>