MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <formula>Sales_Order__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>