MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/fields/WhatsappMessageId__c.field-meta.xml
<CustomField>
    <fullName>WhatsappMessageId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WhatsappMessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>