MODON MRE BPDEV/force-app/main/default/objects/SPAWhatsapp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Status__c</columns>
    <columns>EnvelopeId__c</columns>
    <columns>APICallStatus__c</columns>
    <columns>AccountType__c</columns>
    <columns>FileUploaded__c</columns>
    <columns>WhatsappURL__c</columns>
    <columns>WhatsappMessageId__c</columns>
    <columns>Channel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Order__c</field>
        <operation>equals</operation>
        <value>SO-14946</value>
    </filters>
    <label>All</label>
</ListView>